styles/Cell.module.css
.cell {
  display: flex;
  justify-content: center;
  width: 50px;
  aspect-ratio: 1 / 1;
  border: 1px solid black;
  background-color: white;
}

.adjacent {
  background-color: #ddd;
}

.sameNumber {
  background-color: #aaa;
}

.selected {
  background-color: #777;
}

.locked {
  color: blue;
}

.cell > span {
  align-self: center;
  font-size: 30px;
}

@media (prefers-color-scheme: dark) {
  .cell {
    color: black;
    background-color: #888;
    color: white;
  }

  .adjacent {
    background-color: #666;
  }

  .sameNumber {
    background-color: #565656;
  }

  .selected {
    background-color: #333;
  }
}

@media (max-width: 768px) {
  .cell {
    width: calc(100vmin / 9);
  }

  .cell > span {
    align-self: center;
    font-size: 7vmin;
  }
}

